--- a/index (4).html
+++ b/index (4).html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/druk-wide-trial" rel="stylesheet"> 
-    <link rel="stylesheet" href="stylesheet.css">    
-    <title>King of Css</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>King Of Css</title>
 </head>
 <body>
     <header>
         <ul>
-            <a href=""><li style="margin-left:-10px;">Home</li></a>
-            <a href=""><li>Social Media</li></a>
-            <a href=""><li>Contact Me</li></a>
+            <a href="https://caiocode.github.io/CssKingWebSite/index%20(4).html"><li style="margin-left:-10px;">Home</li></a>
+            <a href="socialMedia.html"><li>Social Media</li></a>
+            <a href="contactMe.html"><li>Contact Me</li></a>
         </ul>
     </header>
     <section class="greatings">
@@ -55,7 +55,7 @@
     <div class="section3">
         <div class="slideSquareBox">
             <a class="link1" target="_blank" href="index-slidingsquare.html">
-                <span class="slideSquareText">Slide Square</span>
+                <span class="slideSquareText text">Slide Square</span>
             </a>
             <div class="animationBox1">
                 <b class="square"></b>
@@ -64,12 +64,30 @@
         </div>
         <div class="borderRadiusBox">
             <a class="link2" target="_blank" href="index-border-radius.html">
-                <span class="BorderRadiusText">Slide Square</span>
+                <span class="borderRadiusText text">Border Radius</span>
             </a>
             <div class="animationBox2">
-                <div class="border"></div>
+                <div class="borderAnimation"></div>
+            </div>
+        </div>
+        <div class="loadingAnimationBox">
+            <a class="link3" target="_blank" href="index-loading.html">
+                <span class="loadingAnimationText text">Loading</span>
+            </a>
+            <div class="animationBox3">
+                <div class="loadingAnimation">
+                    <a class="loadingCircle"></a>
+                    <b class="loadingCircle2"></b>
+                </div>
             </div>
         </div>
     </div>
+<footer>
+    <ul class="footer">
+        <a href="https://www.instagram.com/caiopolo_/?next=%2F" target="_blank"><li class="intagramLink footerLink">Instagram</li></a>
+        <a href="https://github.com/Caiocode" target="_blank"><li class="githubLink footerLink">GitHub</li></a>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><li class="emailLink footerLink">Email</li></a>
+    </ul>
+</footer>
 </body>
 </html>
